--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 
+body {
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+}
 nav {
     max-width: 100vw;
     padding: 25px 9px;
